// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Reset password page > No token (request PW reset) > No token, request reset password link > Calls the request reset password method with valid data 1`] = `
<main class="pdap-flex-container mx-auto max-w-2xl">
  <h1>Request a link to reset your password</h1>
  <form class="pdap-form flex flex-col" id="reset-password" name="reset-password">
    <!---->
    <div class="pdap-grid-container pdap-input">
      <input id="email" name="email" placeholder="Your email address" type="text">
      <!---->
      <!---->
      <label class="pdap-input-label" for="email">Email</label>
    </div>
    <button class="pdap-button pdap-button-primary max-w-full" type="submit">Request password reset</button>
  </form>
</main>
`;

exports[`Reset password page > No token (request PW reset) > No token, success > Renders success message for request reset link 1`] = `
<main class="pdap-flex-container">
  <h1>Success</h1>
  <p>We sent you an email with a link to reset your password. Please follow the link in the email to proceed</p>
  <!--v-if-->
</main>
`;

exports[`Reset password page > With token (reset password) > With token, reset password > Calls the reset password method with valid data 1`] = `
<main class="pdap-flex-container mx-auto max-w-2xl">
  <h1>Change your password</h1>
  <form class="pdap-form flex flex-col" id="reset-password" name="reset-password">
    <!---->
    <div class="pdap-grid-container pdap-input">
      <!---->
      <input id="password" name="password" placeholder="Your updated password" type="password">
      <!---->
      <label class="pdap-input-label" for="password">Password</label>
    </div>
    <div class="pdap-grid-container pdap-input">
      <!---->
      <input id="confirmPassword" name="confirmPassword" placeholder="Confirm your updated password" type="password">
      <!---->
      <label class="pdap-input-label" for="confirmPassword">Confirm Password</label>
    </div>
    <ul class="text-med mb-8"> Passwords must be at least 8 characters and include: <li>1 uppercase letter</li>
      <li>1 lowercase letter</li>
      <li>1 number</li>
      <li>1 special character</li>
    </ul>
    <button class="pdap-button pdap-button-primary max-w-full" type="submit">Change password</button>
  </form>
</main>
`;

exports[`Reset password page > With token (reset password) > With token, reset password > Handles API error with invalid token 1`] = `
<main class="pdap-flex-container mx-auto max-w-2xl">
  <h1>Change your password</h1>
  <p class="flex flex-col items-start sm:gap-4"> Sorry, that token has expired. <a> Click here to request another </a>
  </p>
</main>
`;

exports[`Reset password page > With token (reset password) > With token, reset password > Renders error message with mismatched passwords when trying to sign up and re-validates form 1`] = `
<main class="pdap-flex-container mx-auto max-w-2xl">
  <h1>Change your password</h1>
  <form class="pdap-form flex flex-col" id="reset-password" name="reset-password">
    <div class="pdap-form-error-message">Passwords do not match, please try again.</div>
    <div class="pdap-grid-container pdap-input">
      <!---->
      <input id="password" name="password" placeholder="Your updated password" type="password">
      <!---->
      <label class="pdap-input-label" for="password">Password</label>
    </div>
    <div class="pdap-grid-container pdap-input">
      <!---->
      <input id="confirmPassword" name="confirmPassword" placeholder="Confirm your updated password" type="password">
      <!---->
      <label class="pdap-input-label" for="confirmPassword">Confirm Password</label>
    </div>
    <ul class="text-med mb-8"> Passwords must be at least 8 characters and include: <li>1 uppercase letter</li>
      <li>1 lowercase letter</li>
      <li>1 number</li>
      <li>1 special character</li>
    </ul>
    <button class="pdap-button pdap-button-primary max-w-full" type="submit">Change password</button>
  </form>
</main>
`;

exports[`Reset password page > With token (reset password) > With token, success > Renders success message for reset password 1`] = `
<main class="pdap-flex-container">
  <h1>Success</h1>
  <p>Your password has been successfully updated</p>
  <a>Click here to log in </a>
</main>
`;
